--- a/examples/eval.yaml
+++ b/examples/eval.yaml
@@ -1,26 +1,25 @@
 model:
-  model_name_or_path: "/path/to/dva_model"
-  language_model_path: "/path/to/dva_model/lm_tokenizer"
-  phrase_encoder_path: "/path/to/dva_model/phrase_tokenizer"
-  phrase_sampler_type: "N_TOKENS"
-  sampler_model_path: "/path/to/phrase_sampler_tokenizer"
-  sampler_random_up: 12
-  sampler_random_low: 8
-  phrase_max_length: 5
+  model_name_or_path: "/path/to/prodva"
+  text_encoder_path: "/path/to/prodva/text_tokenizer"
+  language_model_path: "/path/to/prodva/lm_tokenizer"
+  phrase_encoder_path: "/path/to/prodva/phrase_tokenizer"
+  phrase_sampler_type: "PROTEIN_FRAGMENT"
   phrase_encoder_batch_size: 100000
+  protein_fragment_mapping_file: "/path/to/prodva/phrases.json"
 
 infer:
-  doc_top_k: 32
+  doc_top_k: 16
   embedding_model_path: "/path/to/embedding_model"
   vector_store_path: "/path/to/vector_store_index"
   do_sample: true
-  max_new_tokens: 512
+  max_new_tokens: 256
   temperature: 0.7
-  top_k: 50
+  top_k: 950
+  protein_sequence_mapping_file: "/path/to/prodva/protein_sequence_mapping.json"
 
 eval:
   eval_seed: 0
-  test_data_file: "/path/to/test_data.txt"
+  test_data_file: "/path/to/test.json"
   batch_size: 1
   task_type: "PROTEIN_DESIGN"
   save_results_path: "/path/to/save_results.json"
